--- a/monitor/templates/monitor/list.html
+++ b/monitor/templates/monitor/list.html
@@ -6,8 +6,8 @@
     <table class='table table-bordered table-condensed'>
       <tr>
         <td class='UP'>{{ up }}</td>
-        <td class='WARNING'>{{ warning }}</td>
-        <td class='UNREACHABLE'>{{ unreachable }}</td>
+        <td class='WARNING'><a href='{% url 'monitor:warning_list' %}'>{{ warning }}</a></td>
+        <td class='UNREACHABLE'><a href='{% url 'monitor:unreachable_list' %}'>{{ unreachable }}</a></td>
       </tr>
     </table>
   </div>
