better icons, and fixed unreachable page

--- a/templates/mapicons.html
+++ b/templates/mapicons.html
@@ -1,10 +1,13 @@
 
   var UPICON = L.icon({
-    iconUrl: '/static/img/up.png'
+    iconUrl: '/static/img/up.png',
+    iconSize: [20, 20]
   })
   var WARNINGICON = L.icon({
-    iconUrl: '/static/img/warning.png'
+    iconUrl: '/static/img/warning.png',
+    iconSize: [20, 20]
   })
   var UNREACHABLEICON = L.icon({
-    iconUrl: '/static/img/unreachable.png'
+    iconUrl: '/static/img/unreachable.png',
+    iconSize: [20, 20]
   })
