--- a/templates/header-menu.html
+++ b/templates/header-menu.html
@@ -18,7 +18,7 @@
               <span class='glyphicon glyphicon-cog'></span>
             </a>
             <ul class="dropdown-menu">
-              {% if user.is_superuser %}
+              {% if user.is_staff %}
                 <li><a href="/admin">Admin</a></li>
               {% endif %}
               <li><a href="/logout">Logout</a></li>
