--- a/monitor/templates/monitor/overview_map.html
+++ b/monitor/templates/monitor/overview_map.html
@@ -33,6 +33,8 @@
 
   <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
   <script>
+    var height = $(window).height() - 180;
+    $("#overview_map").height(height);
     //var map = L.map('overview_map').setView([42.292529, -82.914347], 11);
     var map = L.map('overview_map').setView([{{ first_y }}, {{ first_x }}], 11);
     {% include 'mapicons.html' %}
