--- a/monitor/templates/monitor/detail.html
+++ b/monitor/templates/monitor/detail.html
@@ -9,7 +9,7 @@
         </tr>
         <tr>
           <th style='width: 30%'>{{ detail.group }}</th>
-          <td rowspan='8' id='detailmap'></td>
+          <td rowspan='9' id='detailmap'></td>
         </tr>
         <tr>
           <td>
@@ -38,7 +38,7 @@
           <td class='{{ detail.status }}' style='height: 200px; line-height: 200px'><strong>{{ detail.status }}<strong></td>
         </tr>
         <tr>
-          <td colspan='2'>{{ detail.status_detail | safe}}</td>
+          <td colspan=''>{{ detail.status_detail | safe}}</td>
         </tr>
       </tbody>
     </table>
