--- a/static/css/mainstyles.css
+++ b/static/css/mainstyles.css
@@ -29,7 +29,7 @@ td.WARNING {
   text-align: center;
 }
 
-td.UP {
+ td.UP {
   background-color: palegreen;
   text-align: center;
 }
@@ -39,12 +39,15 @@ td.UNREACHABLE {
   text-align: center;
 }
 
-.navbar-custom,
-.navbar-custom a {
+.navbar-custom {
   background-color: #363f45;
   font-weight: bold;
   color: #fff;
   text-decoration: none;
+}
+
+.navbar-custom a{
+  color: #fff;
 }
 
 a.navbar-brand,
