--- a/monitor/templates/monitor/list.html
+++ b/monitor/templates/monitor/list.html
@@ -1,17 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class='col-sm-4'></div>
-  <div class='col-sm-4'>
-    <table class='table table-bordered table-condensed'>
-      <tr>
-        <td class='UP'>{{ up }}</td>
-        <td class='WARNING'><a href='{% url 'monitor:warning_list' %}'>{{ warning }}</a></td>
-        <td class='UNREACHABLE'><a href='{% url 'monitor:unreachable_list' %}'>{{ unreachable }}</a></td>
-      </tr>
-    </table>
-  </div>
-  <div class='col-sm-12'><div>
+
   {% for group, hosts in host_list.items %}
   <div class='col-sm-3'>
     <table class='table table-condensed table-bordered table-striped'>
@@ -29,4 +19,14 @@
 
   {% include 'refreshpage.html' %}
   {% endfor %}
+{% endblock %}
+
+{% block status %}
+
+    <p class='navbar-text'>
+      <span class='label label-success'>{{ up }}</span>
+      <span class='label label-warning'><a href='{% url 'monitor:warning_list' %}'>{{ warning }}</a></span>
+      <span class='label label-danger'><a href='{% url 'monitor:unreachable_list' %}'>{{ unreachable }}</a></span>
+    </p>
+
 {% endblock %}
