--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,34 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   <body>
-    {% include 'header-menu.html' %}
+    <nav class="navbar navbar-custom navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="{% url 'front' %}">
+             ITS ALIVE!
+          </a>
+        </div>
+
+        {% if user.is_authenticated %}
+
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li>{% block status %} {% endblock %}</li>
+              <li><a href="{% url 'monitor:host_list' %}">HOSTS</a></li>
+              <li><a href="{% url 'monitor:overview_map' %}">MAP</a></li>
+              {% if user.is_staff %}
+                <li><a href="/admin"><span class='glyphicon glyphicon-cog'></span></a></li>
+              {% endif %}
+              <li><a href="/logout"><span class='glyphicon glyphicon-log-out'></span></a></li>
+
+            </ul>
+          </div>
+        {% endif %}
+
+      </div>
+    </nav>
+
+    <div style='height: 70px;'></div>
 
     <div class='container-fluid'>
       {% block content %}{% endblock %}
