--- a/monitor/templates/monitor/list.html
+++ b/monitor/templates/monitor/list.html
@@ -22,11 +22,5 @@
 {% endblock %}
 
 {% block status %}
-
-    <p class='navbar-text'>
-      <span class='label label-success'>{{ up }}</span>
-      <span class='label label-warning'><a href='{% url 'monitor:warning_list' %}'>{{ warning }}</a></span>
-      <span class='label label-danger'><a href='{% url 'monitor:unreachable_list' %}'>{{ unreachable }}</a></span>
-    </p>
-
+  {% include 'status_block.html' %}
 {% endblock %}
