--- a/monitor/templates/monitor/overview_map.html
+++ b/monitor/templates/monitor/overview_map.html
@@ -49,11 +49,5 @@
 {% endblock %}
 
 {% block status %}
-
-    <p class='navbar-text' style='text-align: center !important; '>
-      <span class='label label-success'>{{ up }}</span>
-      <span class='label label-warning'><a href='{% url 'monitor:warning_list' %}'>{{ warning }}</a></span>
-      <span class='label label-danger'><a href='{% url 'monitor:unreachable_list' %}'>{{ unreachable }}</a></span>
-    </p>
-
+  {% include 'status_block.html' %}
 {% endblock %}
