--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,9 @@
         {% if user.is_authenticated %}
 
           <div class="collapse navbar-collapse">
+
             <ul class="nav navbar-nav navbar-right">
-              <li>{% block status %} {% endblock %}</li>
+
               <li><a href="{% url 'monitor:host_list' %}">HOSTS</a></li>
               <li><a href="{% url 'monitor:overview_map' %}">MAP</a></li>
               {% if user.is_staff %}
@@ -35,6 +36,7 @@
               <li><a href="/logout"><span class='glyphicon glyphicon-log-out'></span></a></li>
 
             </ul>
+                          {% block status %} {% endblock %}
           </div>
         {% endif %}
 
