--- a/monitor/templates/monitor/list.html
+++ b/monitor/templates/monitor/list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block content %}
 
@@ -11,7 +12,9 @@
       {% for host in hosts %}
         <tr>
           <td><a href="{% url 'monitor:detail' host.id %}">{{ host | upper}}</a></td>
-          <td class='{{ host.status }}'>{{ host.status }}</td>
+          {% with 'img/'|add:host.status|add:'.png' as img_static %}
+            <td style='width: 20px'><img src="{% static img_static %}" style='width: 15px;'></td>
+          {% endwith %}
         </tr>
       {% endfor %}
     </table>
