--- a/static/css/mainstyles.css
+++ b/static/css/mainstyles.css
@@ -67,3 +67,28 @@ ul.nav.navbar-nav.navbar-right li a:hover {
 td a {
   color: #363F45;
 }
+
+.subnav {
+  background-color: #eee;
+  position: fixed;
+  padding: 1px;
+  margin: 0;
+  font-size: 12px;
+  left: 0;
+  right: 0;
+  top: 50px;
+  width: 100%;
+  min-height: 14px;
+  line-height: 12px;
+  z-index: 1000;
+}
+
+.subnav ul {
+  list-style-type: none;
+  margin: 0;
+}
+
+.subnav li {
+  display: inline;
+  padding-right: 15px;
+}
